Bug 1497581 - Avoid debug assertion with --disable-updater r=zbraniecki DONTBUILD

Differential Revision: https://phabricator.services.mozilla.com/D104655